fix below the button space has too much space

--- a/Kvent/static/css/event-detail.css
+++ b/Kvent/static/css/event-detail.css
@@ -33,7 +33,7 @@
 
 .row {
     width: 100%;
-    height: 140vh;
+    height: 100%;
 }
 
 .row .event-image {
@@ -49,7 +49,7 @@
 }
 
 .row .event-detail-box {
-    margin: 3em 1em 1em 1em;
+    margin: 3em 1em 5em 1em;
     display: flex;
     flex-direction: column;
     justify-content: center;
